--- a/capstone/src/Styles/MealPlan/WeekView.css
+++ b/capstone/src/Styles/MealPlan/WeekView.css
@@ -79,5 +79,6 @@
         flex-direction: column; 
         gap: 10px;
         width: 90%;
+        padding-bottom: 50px;
     }
 }
